--- a/ros2_aruco/ros2_aruco_interfaces/package.xml
+++ b/ros2_aruco/ros2_aruco_interfaces/package.xml
@@ -4,8 +4,8 @@
   <name>ros2_aruco_interfaces</name>
   <version>0.1.0</version>
   <description>Custom messages for ros2_aruco</description>
-  <maintainer email="nathan.r.sprague@gmail.com">Nathan Sprague</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="tarunsaireddy1998@gmail.com">Tarun</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
