Github workflow updated

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,7 @@ jobs:
           sudo apt install -y ros-humble-ros-base python3-colcon-common-extensions
           sudo apt install -y lcov
           sudo apt install ros-humble-gazebo-ros-pkgs
+          sudo apt install -y ros-humble-turtlebot3  # Install TurtleBot3 packages
 
       - name: Build with coverage
         run: |
